# Brand-Architect-AI-pro-node.0.1

./: .env.example  .gitignore  .replit  AGENTS.md  AI_ARCHITECTURE.md  BACKEND_GUIDE.md  CHANGELOG.md  DEPLOYMENT.md  DOCUMENTATION.md  FRONTEND_GUIDE.md  PROJECT_LOG.md  PYTHON_MIGRATION_PROMPT.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md  tsconfig.json
.agents/: agent_assets_metadata.toml
.agents/memory/: MEMORY.md  api-key-store.md  image-model-dispatch.md  job-store-db.md  task-model-store.md  token-cost.md
artifacts/api-server/: package.json  tsconfig.json
artifacts/api-server-python/: EXCLUDED_FEATURES.md  main.py  requirements.txt
artifacts/api-server-python/app/: config.py  database.py  deps.py  models.py  schemas.py
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/config/: admins.json
artifacts/api-server/src/: app.ts  index.ts
artifacts/brand-os/: index.html  package.json  vite.config.ts
artifacts/brand-os/src/: App.tsx
attached_assets/: Pasted--Senior-Software-Architect-System-Analyst-Product-Manag_1780424226481.txt  المتطلبات_للإصلاح_1777071940544.md
docs/enterprise-redesign/: 01-project-analysis.md  02-product-requirements.md  03-system-design.md  04-backend-architecture.md  05-database-design.md  06-ai-layer-architecture.md  07-workflows.md  08-frontend-architecture.md  09-pages-specification.md  10-saas-features.md  11-performance-scaling.md  12-security.md  13-devops.md  14-implementation-roadmap.md  README.md
scripts/: dev.bat  dev.sh  post-merge.sh  setup.bat  setup.sh  stop.bat
(+147 files in other folders)
